# Qt-Framework-Qt6-CORE

./: README.md
Beginner/: README.md
Beginner/10_Pointers/Manual_and_Automatic_Memory_Management/: CMakeLists.txt  main.cpp  test.cpp
Beginner/10_Pointers/QObject_parent_child/: CMakeLists.txt  main.cpp  person.h
Beginner/11_Signals_and_Slots/Connecting/: CMakeLists.txt  destination.h  main.cpp  source.cpp  source.h
Beginner/11_Signals_and_Slots/Disconnecting/: CMakeLists.txt  radio.cpp  radio.h  station.cpp  station.h
Beginner/11_Signals_and_Slots/Dog_Example/: CMakeLists.txt  dog.cpp  main.cpp  owner.cpp  owner.h
Beginner/11_Signals_and_Slots/Q_Propert/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.h
Beginner/11_Signals_and_Slots/Timer_Example/: CMakeLists.txt  main.cpp  test.cpp  test.h
Beginner/12_Casting/Dynamic_Casting/: CMakeLists.txt  car.h  main.cpp
Beginner/12_Casting/QObject_Cast/: CMakeLists.txt  car.cpp  feline.cpp  feline.h  racecar.cpp  racecar.h
Beginner/12_Casting/Static_Casting/: CMakeLists.txt  car.cpp  car.h  main.cpp  racecar.cpp  racecar.h
Beginner/13_Exception_Handling/Throwing/: CMakeLists.txt  main.cpp
Beginner/13_Exception_Handling/Try_Catch/: CMakeLists.txt  main.cpp
Beginner/14_Templates/QObject_and_Template/: CMakeLists.txt  main.cpp
Beginner/14_Templates/Template_Example/: CMakeLists.txt  main.cpp
Beginner/15_Basic_Qt_Classes/QByteArray/: CMakeLists.txt  main.cpp
Beginner/15_Basic_Qt_Classes/QDate_QTime_QDatetime/: CMakeLists.txt  main.cpp
Beginner/15_Basic_Qt_Classes/QList/: CMakeLists.txt  main.cpp
Beginner/15_Basic_Qt_Classes/QMap/: CMakeLists.txt  main.cpp  pet.cpp
Beginner/15_Basic_Qt_Classes/QObject/: CMakeLists.txt  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
Beginner/15_Basic_Qt_Classes/QString/: main.cpp
Beginner/15_Basic_Qt_Classes/QStringList/: main.cpp
Beginner/15_Basic_Qt_Classes/QVariant/: CMakeLists.txt  main.cpp
Beginner/15_Basic_Qt_Classes/Qt_int_types/: CMakeLists.txt  main.cpp
Beginner/3_First_Steps/HelloWorld/: CMakeLists.txt
Beginner/4_Variables_and_Constants/Enum/: CMakeLists.txt  main.cpp
Beginner/8_Classes/Interface/: CMakeLists.txt  appliance.cpp  appliance.h  main.cpp
(+30 files in other folders)
